# Android-NDI-Player

./: .gitignore  CLEANUP_REPORT.md  OPTIMIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  SCRIPTS_README.md  TESTING_GUIDE.md  TESTING_GUIDE_OPTIMIZED.md  TROUBLESHOOTING.md  adb_config.bat  build_optimized.bat  build_optimized.sh  connect_wifi.bat  debug_adb.bat  dev_tools_final.bat  gradle.properties  install_debug.bat  install_optimized.bat  install_staging.bat  install_testing.bat  monitor_performance.bat  quick_test.bat  settings.gradle.kts  setup_adb.bat  test_adb.bat  watch_logs.bat
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml  AndroidManifest_backup.xml  AndroidManifest_ultra_minimal.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  ndi_wrapper.cpp  ndi_wrapper_new.cpp  ndi_wrapper_old.cpp  ndi_wrapper_optimized.cpp  ndi_wrapper_safe.cpp  pixel_converter.cpp
app/src/main/java/ndiplayer/oto/: MainActivity.java  MainActivityOptimized.java
app/src/main/java/ndiplayer/oto/model/: NDISource.java
app/src/main/java/ndiplayer/oto/service/: NDIDiscoveryService.java  NDIRenderService.java  NDIStreamProcessor.java
app/src/main/java/ndiplayer/oto/utils/: FrameMetrics.java  ObjectPool.java  PerformanceManager.java
app/src/main/jniLibs/: README.md
app/src/main/res/drawable/: ic_ndi_logo.xml  player_controls_background.xml
app/src/main/res/layout/: activity_main.xml  activity_player.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
